<resources>
    <string name="app_name">MelkovHw71</string>
    <string name="Zero">0</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="point">.</string>
    <string name="letter_m">M</string>
    <string name="letter_e">E</string>
    <string name="letter_l">L</string>
    <string name="letter_k">K</string>
    <string name="letter_o">O</string>
    <string name="letter_v">V</string>
</resources>