<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    style="@style/Widget.AppCompat.Button.Borderless">

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@android:color/darker_gray"
        android:textSize="36sp"
        android:text="@string/Zero"
        android:textAlignment="textEnd"
        android:gravity="end" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_m"
                android:textSize="36sp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintEnd_toStartOf="@+id/textE"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_e"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textM"
                app:layout_constraintEnd_toStartOf="@+id/textL"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_l"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textE"
                app:layout_constraintEnd_toStartOf="@+id/textK"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_k"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textL"
                app:layout_constraintEnd_toStartOf="@+id/textO"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textO"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_o"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textK"
                app:layout_constraintEnd_toStartOf="@+id/textV"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/letter_v"
                android:textSize="36sp"
                app:layout_constraintStart_toEndOf="@+id/textO"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_7"
            android:text="@string/Seven"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_8"
            android:text="@string/Eight"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_9"
            android:text="@string/Nine"
            style="@style/ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_4"
            android:text="@string/Four"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_5"
            android:text="@string/Five"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_6"
            android:text="@string/Six"
            style="@style/ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_1"
            android:text="@string/One"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_2"
            android:text="@string/Two"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_3"
            android:text="@string/Three"
            style="@style/ButtonStyle" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_0"
            android:layout_width="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_weight="8"
            android:text="@string/Zero"
            style="@style/ButtonStyle" />

        <Button
            android:id="@+id/button_point"
            android:text="@string/point"
            style="@style/ButtonStyle" />

    </LinearLayout>
    </LinearLayout>


</LinearLayout>